# PLM

./: LICENSE  README.md  pyproject.toml  requirements.txt
configs/: small_esm_mlm.yaml
src/plm/: __init__.py  build_reference.py  data.py  download_uniref.py  embed.py  embedding.py  fasta.py  mlm_collator.py  modeling.py  prepare_dataset.py  reference.py  search.py  search_reference.py  tokenizer.py  train_mlm.py
tests/: test_collator.py  test_download_uniref.py  test_model.py  test_prepare_dataset.py  test_reference_search.py  test_tokenizer.py
tests/fixtures/: toy.fasta
