[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "small-protein-mlm"
version = "0.1.0"
description = "Small ESM-like masked language model training scaffold for protein sequences."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.4.0",
  "transformers>=4.44.0",
  "datasets>=2.20.0",
  "accelerate>=0.33.0",
  "safetensors>=0.4.4",
  "PyYAML>=6.0.1",
  "tqdm>=4.66.4"
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
